--- a/.tekton/devfile-sample-tdoj-push.yaml
+++ b/.tekton/devfile-sample-tdoj-push.yaml
@@ -107,6 +107,11 @@ spec:
     - description: ""
       name: JAVA_COMMUNITY_DEPENDENCIES
       value: $(tasks.build-container.results.JAVA_COMMUNITY_DEPENDENCIES)
+    volumes:
+    - name: snyk-secret
+      secret:
+        secretName: $(params.SNYK_SECRET)
+        optional: true 
     tasks:
     - name: init
       params:
