--- a/.tekton/devfile-sample-tdoj-pull-request.yaml
+++ b/.tekton/devfile-sample-tdoj-pull-request.yaml
@@ -92,6 +92,11 @@ spec:
       description: Snyk Token Secret Name
       name: snyk-secret
       type: string
+    volumes:
+    - name: snyk-secret
+      secret:
+        secretName: $(params.SNYK_SECRET)
+        optional: true 
     results:
     - description: ""
       name: IMAGE_URL
